--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "youtube-clone",
   "version": "1.0.0",
   "description": "A project to implement advanced level of backend, with the help of hitesh Choudary's backend series",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "backend",
@@ -13,5 +14,8 @@
     "mongodb"
   ],
   "author": "Ananya Vichare",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
